--- a/MiniChallenge8/Misc/Info.plist
+++ b/MiniChallenge8/Misc/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
-	<string>AvoidingMerge</string>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
